# h2loop-assistant-evidence

./: CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  LLMClientInterface.cpp  QodeAssist.json.in  QodeAssist.qrc  QodeAssistClient.cpp  QodeAssistClient.hpp  README.md  RefactorSuggestion.hpp  RefactorSuggestionHoverHandler.cpp  qodeassist.cpp
.github/workflows/: pr_agent.yml
ChatView/: CMakeLists.txt  ChatModel.cpp  ChatModel.hpp  ChatRootView.cpp  ChatRootView.hpp  ChatSerializer.cpp  ChatView.cpp  ClientInterface.cpp  ClientInterface.hpp
ChatView/qml/: RootItem.qml
ChatView/qml/chatparts/: FileEditBlock.qml
TaskFlow/Editor/: CMakeLists.txt
UIControls/: CMakeLists.txt
chat/: ChatOutputPane.cpp  NavigationPanel.cpp
context/: ChangesManager.cpp  ChangesManager.h  ContentFile.hpp  ContextManager.cpp  IgnoreManager.cpp
docs/: quick-refactoring.md
llmcore/: HttpClient.cpp  Provider.hpp  ProvidersManager.cpp  ProvidersManager.hpp
logger/: Logger.cpp  Logger.hpp
mcp/: CMakeLists.txt  MCPClientManager.cpp  MCPClientManager.hpp  MCPToolAdapter.cpp  MCPToolAdapter.hpp
providers/: ClaudeProvider.cpp  ClaudeProvider.hpp  GoogleAIProvider.cpp  GoogleAIProvider.hpp  LMStudioProvider.cpp  LMStudioProvider.hpp  LlamaCppProvider.cpp  LlamaCppProvider.hpp  MistralAIProvider.cpp  MistralAIProvider.hpp  OllamaProvider.cpp  OllamaProvider.hpp  OpenAICompatProvider.cpp  OpenAICompatProvider.hpp  OpenAIProvider.cpp  OpenAIProvider.hpp  OpenRouterAIProvider.cpp  OpenRouterAIProvider.hpp
resources/translations/: QodeAssist_en.ts
settings/: ChatAssistantSettings.cpp  CodeCompletionSettings.cpp  GeneralSettings.cpp  GeneralSettings.hpp  MCPSettings.cpp  MCPSettings.hpp  ProjectSettings.cpp  ProjectSettingsPanel.cpp  QuickRefactorSettings.cpp  SettingsConstants.hpp  SettingsTr.hpp  ToolsSettings.cpp  UpdateDialog.cpp
test/: CMakeLists.txt  EditFileToolTest.cpp  LLMClientInterfaceTests.cpp
tools/: BuildProjectTool.cpp  CtagUtils.cpp  CtagUtils.hpp  CtagsTool.cpp  CtagsTool.hpp  DocStringUtils.cpp  DocStringUtils.hpp  EditFileTool.cpp  EditFileTool.hpp  FileSearchUtils.cpp  FileSearchUtils.hpp  FindAndReadFileTool.cpp  FindAndReadFileTool.hpp  ListProjectFilesTool.cpp  ReadFileLinesTool.cpp  ReadFileLinesTool.hpp  ReadVisibleFilesTool.cpp  ToolsFactory.cpp  ToolsFactory.hpp  ToolsManager.cpp  ToolsManager.hpp
widgets/: AddCustomInstructionDialog.cpp  AddCustomInstructionDialog.hpp  CompletionProgressHandler.cpp  CustomInstructionsManager.cpp  CustomInstructionsManager.hpp  EditorChatButton.cpp  InlineRefactorWidget.cpp  InlineRefactorWidget.hpp  ProgressWidget.cpp  QuickRefactorDialog.cpp
